# general_bsp_wrapper

./: CMakeLists.txt  README.md  main.cpp
wrapper/: CMakeLists.txt
wrapper/include/interface/: hal_interface.h
wrapper/include/private/: firmware_instance.h  fixed_signals_enum.h  gpio_wrapper.h  signal_handler.h  signals_mapping.h
wrapper/src/: firmware_instance.cpp  gpio_wrapper.cpp  signal_handler.cpp
